src/test/test-models/bad/reserved/thread_local.stan
data {
  real thread_local;
}
model {
}
